[gd_scene load_steps=3 format=2]

[ext_resource path="res://CarWoModel.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.51077, 0.836963, 1 )

[node name="Spatial" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -9.77524e-08, 0, 0.6, 0, 0.75, 0, -0.6, 0, -9.77524e-08, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Patente" type="CanvasLayer" parent="."]
layer = 0

[node name="PatenteText" type="RichTextLabel" parent="Patente"]
anchor_right = 0.059
anchor_bottom = 0.025
margin_right = 16.48
margin_bottom = -1.0
text = "PRUEBA"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Spatial_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Spatial_mouse_exited"]
